--- a/src/views/characters/characterEdit.ejs
+++ b/src/views/characters/characterEdit.ejs
@@ -17,40 +17,56 @@
             name="nombre"
             placeholder="Nombre del personaje"
             id="name"
-            value="<%= character.nombre %>"
+            value="<%= locals.old && old.nombre ? old.nombre : character.nombre %>"
             class="search-input"
           />
         </label>
+        <% if (locals.errors && errors.nombre) { %>
+          <small class="text-danger"><%= errors.nombre.msg %> </small>
+        <% } %>
+
         Edad:<label for="age">
           <input
             type="number"
             name="edad"
             placeholder="Edad del personaje"
             id="age"
-            value="<%= character.edad %>"
+            value="<%= locals.old && old.edad ? old.edad : character.edad %>"
             class="search-input"
           />
         </label>
+        <% if (locals.errors && errors.edad) { %>
+          <small class="text-danger"><%= errors.edad.msg %> </small>
+        <% } %>
+
         Peso:<label for="weight">
           <input
             type="number"
             name="peso"
             placeholder="Peso del personaje"
             id="weight"
-            value="<%= character.peso %>"
+            value="<%= locals.old && old.peso ? old.peso : character.peso %>"
             class="search-input"
           />
         </label>
+        <% if (locals.errors && errors.peso) { %>
+          <small class="text-danger"><%= errors.peso.msg %> </small>
+        <% } %>
+       
         Historia:<label for="history">
           <input
             type="text"
             name="historia"
             placeholder="Historia del personaje"
             id="history"
-            value="<%= character.historia %>"
+            value="<%= locals.old && old.historia ? old.historia : character.historia %>"
             class="search-input"
           />
         </label>
+        <% if (locals.errors && errors.historia) { %>
+          <small class="text-danger"><%= errors.historia.msg %> </small>
+        <% } %>
+
         Imagen:<label for="character-image">
           <input
             type="file"
@@ -59,6 +75,13 @@
             class="search-input"
           />
         </label>
+        <% if (locals && locals.fileEmpty) { %>
+          <small class="text-danger"><%- locals.fileEmpty %></small>
+        <% } %>
+        <% if (locals && locals.fileError) { %>
+          <small class="text-danger"><%- locals.fileError %></small>
+        <% } %>
+
         Peliculas/Series Asociadas:
         <div class="checkbox-container">
           <% movies.forEach(movie => { %>
