--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,5 +3,6 @@
   <%- include("partials/head") %>
   <body>
     <%- include("sidebar") %>
+    <h1 class="title-index">Bienvenido al Challenge de Alkemy NodeJS</h1>
   </body>
 </html>
