--- a/src/views/genres/genreEdit.ejs
+++ b/src/views/genres/genreEdit.ejs
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html>
-<%- include("../partials/head") %>
+  <%- include("../partials/head") %>
 
-    <body>
-        <%- include("../sidebar") %>
-            <div class="div-form">
-                <form action="/genres/edit/<%= genre.id %>?_method=PUT" method="POST" enctype="multipart/form-data" class="form">
-                    Nombre:<label for="name">
-                        <input type="text" name="nombre" placeholder="Nombre del genero" id="name" value="<%= genre.nombre %>" class="search-input"/>
-                    </label>
-                    Imagen:<label for="genre-image">
-                        <input type="file" name="imagen_genero" id="genre-image" class="search-input"/>
-                    </label>
+  <body>
+    <%- include("../sidebar") %>
+    <div class="div-form">
+      <form
+        action="/genres/edit/<%= genre.id %>?_method=PUT"
+        method="POST"
+        enctype="multipart/form-data"
+        class="form"
+      >
+        Nombre:<label for="name">
+          <input
+            type="text"
+            name="nombre"
+            placeholder="Nombre del genero"
+            id="name"
+            value="<%= genre.nombre %>"
+            class="search-input"
+          />
+        </label>
+        <% if (locals.errors && errors.nombre) { %>
+        <small class="text-danger"><%= errors.nombre.msg %> </small>
+        <% } %> Imagen:<label for="genre-image">
+          <input
+            type="file"
+            name="imagen_genero"
+            id="genre-image"
+            class="search-input"
+          />
+        </label>
+        <% if (locals && locals.fileEmpty) { %>
+        <small class="text-danger"><%- locals.fileEmpty %></small>
+        <% } %> 
+        <% if (locals && locals.fileError) { %>
+        <small class="text-danger"><%- locals.fileError %></small>
+        <% } %>
 
-                    <button type="submit" class="search-button">Confirmar</button>
-                </form>
-            </div>
-    </body>
-
+        <button type="submit" class="search-button">Confirmar</button>
+      </form>
+    </div>
+  </body>
 </html>
