--- a/src/views/users/userRegister.ejs
+++ b/src/views/users/userRegister.ejs
@@ -5,6 +5,7 @@
     <body>
         <%- include("../sidebar") %>
             <div class="div-form">
+                <h1>Registro</h1>
                 <form action="/auth/register" method="POST" enctype="application/x-www-form-urlencoded" class="form">
                     Email:<label for="email">
                         <input type="text" name="email" placeholder="Direccion de email" id="email" class="search-input"/>
