--- a/src/views/genres/genreAdd.ejs
+++ b/src/views/genres/genreAdd.ejs
@@ -4,6 +4,7 @@
 
   <body>
     <%- include("../sidebar") %>
+    <h2 class="title-h2">Agregar Genero</h2>
     <div class="div-form">
       <form
         action="/genres/add"
