--- a/src/views/movies/movieAdd.ejs
+++ b/src/views/movies/movieAdd.ejs
@@ -4,6 +4,7 @@
 
   <body>
     <%- include("../sidebar") %>
+    <h2 class="title-h2">Agregar Pelicula o Serie</h2>
     <div class="div-form">
       <form
         action="/movies/add"
