--- a/src/views/movies/movieEdit.ejs
+++ b/src/views/movies/movieEdit.ejs
@@ -4,6 +4,7 @@
 
   <body>
     <%- include("../sidebar") %>
+    <h2 class="title-h2">Editar Pelicula o Serie</h2>
     <div class="div-form">
       <form
         action="/movies/edit/<%= movie.id %>?_method=PUT"
