--- a/src/views/partials/characterSearch.ejs
+++ b/src/views/partials/characterSearch.ejs
@@ -1,4 +1,5 @@
 <form class="search" action="/characters/search" method="GET">
+    <h2>Buscador de Personajes</h2>
     <input type="text" name="name" placeholder="Escribe aqui el nombre..." class="search-input">
     <input type="number" name="age" placeholder="Escribe aqui la edad..." class="search-input">
     <input type="number" name="weight" placeholder="Escribe aqui el peso..." class="search-input">
