--- a/src/views/partials/movieSearch.ejs
+++ b/src/views/partials/movieSearch.ejs
@@ -1,4 +1,5 @@
 <form class="search" action="/movies/search" method="GET">
+    <h2>Buscador de Peliculas</h2>
     <input type="text" name="title" placeholder="Escribe aqui el titulo..." class="search-input">
     <select name="genre" id="genre" class="search-input">
         <option selected hidden value="">Seleccionar genero</option>
