--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -1,33 +1,35 @@
 .search {
-    position: relative;
-    left: 230px;
-    top: 12px;
-    width: 415px;
-    border-radius: 20px;
-    margin-bottom: 10px;
+  position: relative;
+  left: 260px;
+  top: 12px;
+  width: 415px;
+  border-radius: 20px;
+  margin-bottom: 10px;
 }
 
 .search-input {
-    border: 2px solid black;
-    border-radius: 30px;
-    padding: 10px;
-    outline: none;
-    min-width: 400px;
-    font-size: 15px;
-    background-color: var(--colour-one);
-    color: aliceblue;
-    margin-bottom: 5px;
-    text-overflow: ellipsis;
+  border: 2px solid black;
+  border-radius: 30px;
+  padding: 10px;
+  outline: none;
+  min-width: 400px;
+  font-size: 15px;
+  background-color: var(--colour-one);
+  color: aliceblue;
+  margin-bottom: 5px;
+  text-overflow: ellipsis;
 }
 
 .search-button {
-    color: var(--colour-four);
-    font-size: 20px;
-    background-color: var(--colour-one);
-    border-radius: 40px;
-    padding: 10px;
+  color: var(--colour-four);
+  font-size: 20px;
+  background-color: var(--colour-one);
+  border-radius: 40px;
+  padding: 10px;
+  margin: 10px;
 }
 
-.search-icon:hover {
-    color: chocolate;
+.search h2 {
+  padding: 16px;
+  color: var(--colour-four);
 }
