--- a/public/stylesheets/sidebar.css
+++ b/public/stylesheets/sidebar.css
@@ -1,6 +1,6 @@
 #sidebar {
   position: fixed;
-  width: 200px;
+  width: 240px;
   height: 100%;
   background: var(--colour-one);
 }
@@ -28,4 +28,13 @@
   font-size: 30px;
   border: 3px solid #000;
   border-radius: 30%;
+}
+
+#sidebar i {
+  padding: 5px;
+  font-size: 18px;
+}
+
+#sidebar a:hover {
+  color: var(--colour-three);
 }
