--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,12 +2,13 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
 }
 
 body {
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/images/disney-background.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/images/disney-background.png");
   height: 100vh;
   background-size: cover;
   overflow: scroll;
@@ -18,12 +19,8 @@ a {
   text-decoration: none;
 }
 
-#sidebar a:hover {
-  color: var(--colour-three);
-}
-
 .text-danger {
-  color:rgb(250, 89, 89);
+  color: rgb(250, 89, 89);
 }
 
 button:hover {
@@ -31,8 +28,16 @@ button:hover {
 }
 
 .title-index {
-    position: relative;
-    left: 50vh;
-    top: 40vh;
-    color: white;
+  position: relative;
+  left: 50vh;
+  top: 40vh;
+  color: white;
 }
+
+.title-h2 {
+  position: relative;
+  left: 260px;
+  color: var(--colour-four);
+  padding: 10px 0;
+}
+
