--- a/src/views/genres/genreEdit.ejs
+++ b/src/views/genres/genreEdit.ejs
@@ -4,6 +4,7 @@
 
   <body>
     <%- include("../sidebar") %>
+    <h2 class="title-h2">Editar Genero</h2>
     <div class="div-form">
       <form
         action="/genres/edit/<%= genre.id %>?_method=PUT"
